:last-update-label!:

= History

== 10.0.1 (undetermined)
* Refined documents. #389, #390

== 10.0.0
=== breaking changes #388
* Re-organized include files.
** See https://redboltz.github.io/async_mqtt/doc/10.0.0/async_mqtt/header.html
* Removed non bulk read to meet Sans-I/O interface.
* Supported I/O independent (aka Sans-I/O) library.
* underlying_handshake functionality is updated from free function to member function.
** Simply replace `async_underlying_handshake(your_ep.next_layer(), ...)` with `your_ep.async_underlying_handshake(...)`.

=== other updates
* Added invalid combination checking of sharename and nl(no local). #372
* Fixed receive maximum processing. #371
* Fixed invalid Message Expiry Interval applying. #369
* Fixed invalid template parameter comparison. #368
* Added custom logger example. #367
* Refined documents. #364, #365
* Made colored log selectable (by default true(colored)). #363
* Fixed misuse of bound allocator. #362
* Fixed TLS example. #361

== 9.0.2
* Added ASYNC_MQTT_BUILD_EXAMPLES_SEPARATE option to enable library separate build example. #359
* Fixed TLS timeout logic. #357
* Fixed broker auth file for docker. #356

== 9.0.1
* Fixed TLS plug out timeout logic. #355
* Refined client_cli tool. #354
* Refined bench tool. #352
* Refined docker container. #350
* Moved setup_log.hpp to `util/` (appropriate location). #349
* Refined documents. #348, #349, #351

== 9.0.0
=== breaking changes
* endpoint, basic_endpoint, and client become value based design. #346
** static member function `create()` is removed.
** constructor becomes public.
** move constructor is supported.
** you can replace `endpoint<...>::create(...)`  with `endpoint<...>{...}` for value or `std::make_shared<endpoint<...>>(...)` for shared_ptr.
* Updated timeout duration setting function parameter type as `std::chorono::milliseconds`. #342, #345
** User can pass any duration types like `std::chrono::milliseconds`, `std::chrono::seconds`, etc.